added nav__mobile class to container

--- a/header.html
+++ b/header.html
@@ -58,7 +58,7 @@ window.onload = init; //runs all javascript with init function on window load
 
 </head>
 <body>
-	<header class="nav-desktop">
+	<header class="nav-desktop nav__mobile">
 		<nav>
 			<!-- Mobile Nav header: logo and hamburger menu STARTS -->
 			<div class="nav__mobile--logoandham"><span class=""><img id="mobileLogo" src="src/img/dscvr_retro.png" alt="DSCVR Logo" /></span>
