--- a/header.html
+++ b/header.html
@@ -61,7 +61,7 @@ window.onload = init; //runs all javascript with init function on window load
 	<header class="nav-desktop nav__mobile">
 		<nav>
 			<!-- Mobile Nav header: logo and hamburger menu STARTS -->
-			<div class="nav__mobile--logoandham"><span class=""><img id="mobileLogo" src="src/img/dscvr_retro.png" alt="DSCVR Logo" /></span>
+			<div class="nav__mobile--logoandham"><span class=""><img id="mobileLogo" src="src/img/branding/dscvr1.5x.png" alt="DSCVR Logo" /></span>
 					<span id="hamburger"><i  class="fas fa-bars fa-2x nav__mobile--hamburger"></i></span>
 				</div>
 
