changed javscript hide/show to flex instead of block

--- a/header.html
+++ b/header.html
@@ -38,7 +38,7 @@ function init() {
 
 		//mobile menu toggle
 		if (menuDropdownList.style.display ==='none') {
-		    menuDropdownList.style.display = 'block';
+		    menuDropdownList.style.display = 'flex';
 		  }
 		  else {
 		    menuDropdownList.style.display = 'none';
