Changed several classes from BEM modifiers to Elements

--- a/header.html
+++ b/header.html
@@ -58,11 +58,11 @@ window.onload = init; //runs all javascript with init function on window load
 
 </head>
 <body>
-	<header class="nav-desktop nav__mobile">
+	<header class="nav-desktop nav-mobile">
 		<nav>
 			<!-- Mobile Nav header: logo and hamburger menu STARTS -->
-			<div class="nav__mobile--logoandham"><span class=""><img id="mobileLogo" src="src/img/branding/dscvr1.5x.png" alt="DSCVR Logo" /></span>
-					<span id="hamburger"><i  class="fas fa-bars fa-2x nav__mobile--hamburger"></i></span>
+			<div class="nav-mobile__navbar">
+				<a href="index.html" class="nav-mobile__logo">
 				</div>
 
 				<!-- Mobile Nav header: logo and hamburger menu ENDS -->
