--- a/header.html
+++ b/header.html
@@ -63,6 +63,26 @@ window.onload = init; //runs all javascript with init function on window load
 			<!-- Mobile Nav header: logo and hamburger menu STARTS -->
 			<div class="nav-mobile__navbar">
 				<a href="index.html" class="nav-mobile__logo">
+				<img id="mobileLogo" src="src/img/branding/dscvr1.5x.png" alt="DSCVR Logo" /></a>
+				<nav>
+				<ul class="nav-desktop__list">
+
+					<li class="nav-desktop__item">
+						<a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
+						</a>
+					</li>
+					<li class="nav-desktop__item">
+						<a class="nav-link nav-link--secondary"
+						href="guestbook.html">Guestbook
+						</a>
+					</li>
+					<li  class="nav-desktop__item">
+						<a class=" nav-link nav-link--tertiary" href="contact.html">Contact
+						</a>
+					</li>
+				</ul>
+			</nav>
+					<span id="hamburger"><i  class="fas fa-bars fa-2x nav-mobile--hamburger"></i></span>
 				</div>
 
 				<!-- Mobile Nav header: logo and hamburger menu ENDS -->
