reworked links and hamburger is now an ELEMENT

--- a/header.html
+++ b/header.html
@@ -82,23 +82,23 @@ window.onload = init; //runs all javascript with init function on window load
 					</li>
 				</ul>
 			</nav>
-					<span id="hamburger"><i  class="fas fa-bars fa-2x nav-mobile--hamburger"></i></span>
+					<span id="hamburger"><i  class="fas fa-bars fa-2x nav-mobile__hamburger"></i></span>
 				</div>
 
 				<!-- Mobile Nav header: logo and hamburger menu ENDS -->
 
 		<ul id="mobileMenu" class="mobile-menu">
 			<li class="nav-desktop__item nav-mobile__item">
-				<a class="nav-link nav-link--primary" href="/portfolio.html">Portfolio
+				<a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
 				</a>
 			</li>
 			<li class="nav-desktop__item nav-mobile__item">
 				<a class="nav-link nav-link--secondary"
-				href="/guestbook.html">Guestbook
+				href="guestbook.html">Guestbook
 				</a>
 			</li>
 			<li  class="nav-desktop__item nav-mobile__item">
-				<a class=" nav-link nav-link--tertiary" href="/contact.html">Contact
+				<a class=" nav-link nav-link--tertiary" href="contact.html">Contact
 				</a>
 			</li>
 		</ul>
