removed mobile hero, autoindented, removed card tag

--- a/splash.html
+++ b/splash.html
@@ -1,84 +1,75 @@
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="./dist/css/app.css">
-    <title>Document</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta http-equiv="X-UA-Compatible" content="ie=edge">
+	<link rel="stylesheet" href="./dist/css/app.css">
+	<title>Document</title>
 </head>
 <body class="bg-stripes">
 
 
 
-                <!---CARD BEGINS-->
+	<!---CARD BEGINS-->
 
-                <section class="content-block content-block--wide">
-
-                            <div class="card">
-
-                        <!-- MOBILE HERO IMAGE SLIDER ENDS -->
-                                <h1>DSCVR</h1>
-                                <h1>Student. Portfolio. Show</h1>
-                               <p class="card__description">
-                                Discover the Graphic & Web Design graduating class of 2019 at the North Idaho College Workforce Training Center.
-                               </p>
-                               <h3>Friday May 3rd at 4:30 pm to 7 pm</h3>
-                               <p>North Idaho College Workforce Traning Center
-                                   525 S Clearwater Loop, Post Falls, ID 83854</p>
-                               <div class="cards-button">
-                               <a href="https://www.facebook.com/events/296907444564690/?active_tab=about" class="button button--skew button--hoverstraight button__nocolor button__nocolor--yellow"><div class="button--inverseskew button--hoverstraight">View Event</div></a>
-                            </div>
-                            </div>
-
-                <!---CARD ENDS-------->
-                        </section>
-
-                         <!-- MOBILE HERO IMAGE MODULE BEGINS -->
-                <div class="hero-image__card">
-                        <!-- MOBILE HERO IMAGE SLIDER BEGINS -->
-                          <div class="hero-image__mobile">
-                            <img class="hero-image__mobile--slider" src="src/img/mobile-hero/web.png" alt="Illustration of the web team." />
-                          <img class="hero-image__mobile--slider" src="src/img/mobile-hero/illustration.png" alt="Illustration of the illustration team." />
-                          <img class="hero-image__mobile--slider" src="src/img/mobile-hero/branding.png" alt="Illustration of the branding team." />
-                          <img class="hero-image__mobile--slider" src="src/img/mobile-hero/print.png" alt="Illustration of the print team." />
-                          <img class="hero-image__mobile--slider" src="src/img/mobile-hero/socialmedia.png" alt="Illustration of thes social media team." />
-
-                        </div>
-
-                        <!-- desktop hero image -->
-                        <img class="hero-image__desktop" src="src/img/main-img-assets/desktop-hero-transparent.png" alt="Group illustration." />
+	<section class="content-block content-block--wide heading--center">
 
 
-                        <!-- MOBILE HERO IMAGE SLIDER ENDS -->
+			<!-- MOBILE HERO IMAGE SLIDER ENDS -->
+			<h1 class="heading--h1">DSCVR</h1>
+			<h3 class="heading--h3">Student Portfolio Show</h3>
+			<p class="card__description">
+				Discover the Graphic & Web Design graduating class of 2019 at the North Idaho College Workforce Training Center.
+			</p>
+			<h3 class="heading--h3">Friday, May 3rd <br> 4:30PM to 7PM</h3>
+			<p>North Idaho College Workforce Traning Center
+				525 S Clearwater Loop, Post Falls, ID 83854</p>
+				<div class="cards-button ">
+					<a href="https://www.facebook.com/events/296907444564690/?active_tab=about" class="button button--skew  button__nocolor button__nocolor--yellow">
+						View Event
+					</a>
+				</div>
+			</div>
+
+			<!---CARD ENDS-------->
+		</section>
+
+		<!-- MOBILE HERO IMAGE MODULE BEGINS -->
+
+			<!-- desktop hero image -->
+			<img class="hero-image__desktop" src="src/img/main-img-assets/desktop-hero-transparent.png" alt="Group illustration." />
 
 
-                        <script>
+			<!-- MOBILE HERO IMAGE SLIDER ENDS -->
 
 
-                                function init() {
-                            // Start Mobile Hero Image Slider
-                                 var imageTotal = 0;
-                                 imageSlider();
-
-                                 function imageSlider() {
-                                   var images = document.getElementsByClassName("hero-image__mobile--slider");
-                                   for (var i = 0; i < images.length; i++) {
-                                     images[i].style.display = "none";
-                                   }
-                                  imageTotal++;
-                                  if (imageTotal > images.length) { imageTotal = 1
-                                  }
-                                  images[imageTotal - 1].style.display = "block";
-                                  setTimeout (imageSlider, 2000);
-                                 }
-                            // End Mobile Hero Image Slider
+			<script>
 
 
-                              };
+			function init() {
+				// Start Mobile Hero Image Slider
+				var imageTotal = 0;
+				imageSlider();
 
-                              window.onload = init;
+				function imageSlider() {
+					var images = document.getElementsByClassName("hero-image__mobile--slider");
+					for (var i = 0; i < images.length; i++) {
+						images[i].style.display = "none";
+					}
+					imageTotal++;
+					if (imageTotal > images.length) { imageTotal = 1
+					}
+					images[imageTotal - 1].style.display = "block";
+					setTimeout (imageSlider, 2000);
+				}
+				// End Mobile Hero Image Slider
 
-                            </script>
 
-</body>
-</html>
+			};
+
+			window.onload = init;
+
+			</script>
+
+		</body>
+		</html>
