--- a/header.html
+++ b/header.html
@@ -10,7 +10,9 @@
 	<script>
 
 	//wraps all javascript
-function init() {
+	function init() {
+		var menuDropdownList = document.getElementById('mobileMenu');
+		var hamburgerMenu = document.getElementById('hamburger');
 		var menuDropdownList = document.getElementById('mobileMenu'); //targets ul with menu a tags
 		function menuClick() {
 			var hamburgerMenu = document.getElementById('hamburger'); //targets mobile hamburger menu icon
@@ -18,40 +20,39 @@ function init() {
 
 			var showWebsite = document.getElementsByTagName('body');
 			// var w = window.clientWidth;
-	 }
+		}
 
-	// function screenSizeCheck() {
-	// 	//if the window is greater than or equal to 769px then change the display of the ul to flex
-	// 	if (window.onresize >= '769px'){
-	// 		menuDropdownList.style.display = 'flex';
-	// 	}
-	// 	//if the window is less than 769px then run showMenu which changes ul to display none or display block
-	// 	else if (window.onresize < '769px') {
-	// 		menuDropdownList.style.display = showMenu;
-	// 	}
-	// }
+		// function screenSizeCheck() {
+		// 	//if the window is greater than or equal to 769px then change the display of the ul to flex
+		// 	if (window.onresize >= '769px'){
+		// 		menuDropdownList.style.display = 'flex';
+		// 	}
+		// 	//if the window is less than 769px then run showMenu which changes ul to display none or display block
+		// 	else if (window.onresize < '769px') {
+		// 		menuDropdownList.style.display = showMenu;
+		// 	}
+		// }
 
-	function showMenu() {
+		function showMenu() {
 
-		var menuDropdownList = document.getElementById('mobileMenu');
-		var hamburgerMenu = document.getElementById('hamburger')
 
-		//mobile menu toggle
-		if (menuDropdownList.style.display ==='none') {
-		    menuDropdownList.style.display = 'flex';
-		  }
-		  else {
-		    menuDropdownList.style.display = 'none';
 
-		  }
+			//mobile menu toggle
+			if (menuDropdownList.style.display === 'flex' ) {
+				menuDropdownList.style.display = 'none';
+			}
+			else {
+				menuDropdownList.style.display = 'flex';
 
-	}
-	menuClick(); //starts onclick listening
-	// window.onresize = screenSizeCheck; //runs a screen size check when window is resized
+			}
 
-}; //end of function init
+		}
+		menuClick(); //starts onclick listening
+		// window.onresize = screenSizeCheck; //runs a screen size check when window is resized
 
-window.onload = init; //runs all javascript with init function on window load
+	}; //end of function init
+
+	window.onload = init; //runs all javascript with init function on window load
 
 	</script>
 
@@ -63,38 +64,38 @@ window.onload = init; //runs all javascript with init function on window load
 			<!-- Mobile Nav header: logo and hamburger menu STARTS -->
 			<div class="nav-mobile__navbar">
 				<a href="index.html" class="nav-mobile__logo">
-				<img id="mobileLogo" src="src/img/branding/dscvr1.5x.png" alt="DSCVR Logo" /></a>
-				<nav>
-				<ul class="nav-desktop__list">
+					<img id="mobileLogo" src="src/img/branding/dscvr1.5x.png" alt="DSCVR Logo" /></a>
+					<nav>
+						<ul class="nav-desktop__list">
 
-					<li class="nav-desktop__item">
-						<a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
-						</a>
-					</li>
-					<li class="nav-desktop__item">
-						<a class="nav-link nav-link--secondary"
-						href="guestbook.html">Guestbook
-						</a>
-					</li>
-					<li  class="nav-desktop__item">
-						<a class=" nav-link nav-link--tertiary" href="contact.html">Contact
-						</a>
-					</li>
-				</ul>
-			</nav>
-					<span id="hamburger"><i  class="fas fa-bars fa-2x nav-mobile__hamburger"></i></span>
-				</div>
+							<li class="nav-desktop__item">
+								<a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
+								</a>
+							</li>
+							<li class="nav-desktop__item">
+								<a class="nav-link nav-link--secondary"
+								href="guestbook.html">Guestbook
+							</a>
+						</li>
+						<li  class="nav-desktop__item">
+							<a class=" nav-link nav-link--tertiary" href="contact.html">Contact
+							</a>
+						</li>
+					</ul>
+				</nav>
+				<a id="hamburger"><i  class="fas fa-bars fa-2x nav-mobile__hamburger"></i></a>
+			</div>
 
-				<!-- Mobile Nav header: logo and hamburger menu ENDS -->
+			<!-- Mobile Nav header: logo and hamburger menu ENDS -->
 
-		<ul id="mobileMenu" class="mobile-menu">
-			<li class="nav-desktop__item nav-mobile__item">
-				<a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
-				</a>
-			</li>
-			<li class="nav-desktop__item nav-mobile__item">
-				<a class="nav-link nav-link--secondary"
-				href="guestbook.html">Guestbook
+			<ul id="mobileMenu" class="mobile-menu nav-mobile--bg-stripes">
+				<li class="nav-desktop__item nav-mobile__item">
+					<a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
+					</a>
+				</li>
+				<li class="nav-desktop__item nav-mobile__item">
+					<a class="nav-link nav-link--secondary"
+					href="guestbook.html">Guestbook
 				</a>
 			</li>
 			<li  class="nav-desktop__item nav-mobile__item">
@@ -103,7 +104,7 @@ window.onload = init; //runs all javascript with init function on window load
 			</li>
 		</ul>
 	</nav>
-	</header>
-	<script type="text/javascript" src="./dist/js/app.js"></script>
+</header>
+<script type="text/javascript" src="./dist/js/app.js"></script>
 </body>
 </html>
