added address back in

--- a/splash.html
+++ b/splash.html
@@ -23,9 +23,8 @@
 		</p>
 		<h4 class="heading--h4">Friday, May 3rd <br>4:30PM to 7PM</h4>
 		<a href="https://goo.gl/maps/zaiyNCzZuaN7J7359">
-
-		 <p>North Idaho College<br>Workforce Traning Center<br>
-			525 S Clearwater Loop, <br>Post Falls, ID 83854</p>
+		 North Idaho College, Workforce Training Center<br>
+			525 S Clearwater Loop, Post Falls, ID 83854</p>
 		</a>
 				<a href="https://www.facebook.com/events/296907444564690/?active_tab=about" class="button button--skew  button__nocolor button__nocolor--yellow">
 					View Event
