--- a/splash.html
+++ b/splash.html
@@ -21,7 +21,7 @@
 		<p class="card__description heading--h5">
 			Discover the Graphic & Web Design graduating class of 2019 <br> at the North Idaho College Workforce Training Center.
 		</p>
-		<h4 class="heading--h4">Friday, May 3rd <br>4:30PM to 7PM</h4>
+		<h4 class="heading--h4">Friday, May 3rd 4:30PM to 7PM</h4>
 		<a href="https://goo.gl/maps/zaiyNCzZuaN7J7359">
 		 North Idaho College, Workforce Training Center<br>
 			525 S Clearwater Loop, Post Falls, ID 83854</p>
