--- a/splash.html
+++ b/splash.html
@@ -22,12 +22,11 @@
 			Discover the Graphic & Web Design graduating class of 2019 <br> at the North Idaho College Workforce Training Center.
 		</p>
 		<h4 class="heading--h4">Friday, May 3rd 4:30PM to 7PM</h4>
-		<a href="https://goo.gl/maps/zaiyNCzZuaN7J7359">
-		 North Idaho College, Workforce Training Center<br>
-			525 S Clearwater Loop, Post Falls, ID 83854</p>
-		</a>
 				<a href="https://www.facebook.com/events/296907444564690/?active_tab=about" class="button button--skew  button__nocolor button__nocolor--yellow">
 					View Event
+				</a>
+				<a href="https://goo.gl/maps/zaiyNCzZuaN7J7359" class="button button--skew  button__nocolor button__nocolor">
+					Directions
 				</a>
 			</div>
 
