--- a/button.html
+++ b/button.html
@@ -25,10 +25,11 @@
       flex-direction: column;
       flex-grow: 1;
       width: 200px;
-      height: 500px;
+      height: 100%;
       align-items: center;
       justify-content: center;
       margin: 20px;
+      padding: 10px;
       border: black solid 2px;
 
 
@@ -77,10 +78,57 @@
 <main>
 <!-- Green background -->
 <div class="button__container button__container4">
+<p>Buttons without skew</p>
+<!-- GREEN BUTTON -->
+  <a href="" class="button button__nocolor button__nocolor--green">Green Button</a>
 
-  <a href="" class="button button__nocolor button__nocolor--green">No Skew Button</a>
+<!-- YELLOW BUTTON -->
+<a href="" class="button button__nocolor button__nocolor--yellow">Yellow Button</a>
 
-  <a href="" class="button button__nocolor button__nocolor--green button--hoverinverseskew"><div class="button--hoverinversetextskew">Straight to Skew (right)</div></a>
+<a href="" class="button button__nocolor">Pink Button</a>
+
+<!-- BLUE BUTTON -->
+<a href="" class="button button__nocolor button__nocolor--blue">Blue Button</a>
+
+<p>Colored buttons without skew</p>
+<!-- GREEN BUTTON -->
+  <a href="" class="button button__color--green">Green Button</a>
+
+<!-- YELLOW BUTTON -->
+<a href="" class="button button__color--yellow">Yellow Button</a>
+
+<a href="" class="button">Pink Button</a>
+
+<!-- BLUE BUTTON -->
+<a href="" class="button button__color--blue">Blue Button</a>
+
+
+<p>Buttons with skew</p>
+
+<!-- GREEN BUTTON -->
+  <a href="" class="button button__nocolor button__nocolor--green button--hoverinverseskew"><div>Green skew button</div></a>
+
+<!-- YELLOW BUTTON -->
+  <a href="" class="button button__nocolor button__nocolor--yellow button--hoverinverseskew"><div >Yellow skew button</div></a>
+
+<!-- BLUE BUTTON -->
+  <a href="" class="button button__nocolor button__nocolor--blue button--hoverinverseskew"><div >Blue skew button</div></a>
+
+<!-- RED BUTTON -->
+  <a href="" class="button button__nocolor button--hoverinverseskew"><div >Red skew button</div></a>
+
+  <p>Colored Buttons with skew</p>
+<!-- RED BUTTON -->
+  <a href="" class="button button--hoverinverseskew">Red skew button</a>
+
+  <!-- BLUE BUTTON -->
+    <a href="" class="button button__color--blue button--hoverinverseskew">Blue skew button</a>
+
+    <!-- YELLOW BUTTON -->
+      <a href="" class="button button__color--yellow button--hoverinverseskew">Yellow skew button</a>
+
+      <!-- GREEN BUTTON -->
+        <a href="" class="button button__color--green button--hoverinverseskew">Green skew button</a>
 
 </div>
 </body>
