--- a/splash.html
+++ b/splash.html
@@ -4,7 +4,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link rel="stylesheet" href="./dist/css/app.css">
-	<title>Document</title>
+	<title>North Idaho College Student Portfolio Show</title>
 </head>
 <body class="bg-stripes">
 
