--- a/splash.html
+++ b/splash.html
@@ -16,7 +16,7 @@
 
 
 		<!-- MOBILE HERO IMAGE SLIDER ENDS -->
-		<h1 class="heading--h1">DSCVR</h1>
+		<h1 class="heading--h1">D &nbsp;S&nbsp;C&nbsp;V &nbsp;R</h1>
 		<h5 class="heading--h4">Student Portfolio Show</h5>
 		<p class="card__description heading--h5">
 			Discover the Graphic & Web Design graduating class of 2019 <br> at the North Idaho College Workforce Training Center.
