--- a/splash.html
+++ b/splash.html
@@ -22,10 +22,10 @@
 			Discover the Graphic & Web Design graduating class of 2019 <br> at the North Idaho College Workforce Training Center.
 		</p>
 		<h4 class="heading--h4">Friday, May 3rd 4:30PM to 7PM</h4>
-				<a href="https://www.facebook.com/events/296907444564690/?active_tab=about" class="button button--skew  button__nocolor button__nocolor--yellow">
+				<a href="https://www.facebook.com/events/296907444564690/?active_tab=about" class="button button__nocolor button__nocolor--yellow button--hoverskew">
 					View Event
 				</a>
-				<a href="https://goo.gl/maps/zaiyNCzZuaN7J7359" class="button button--skew  button__nocolor button__nocolor">
+				<a href="https://goo.gl/maps/zaiyNCzZuaN7J7359" class="button button__nocolor button--hoverskew">
 					Directions
 				</a>
 			</div>
