--- a/portfolio-cards.html
+++ b/portfolio-cards.html
@@ -35,13 +35,26 @@ function init() {
     }
 
 function slideshow(){
-
-  currentPortfolioLB = this.innerHTML;
-  // var source_thumb_img = portfolioGallery;
-  // source_thumb_img[0].innerHTML = currentPortfolioLB.innerHTML;
-
+// Grabs the clicked on ul and passes its li to lightbox's ul
+  var source_thumb_img = this.innerHTML;
+  // var currentSelectedImage = this[0].innerHTML;
   var target_thumb_img = document.getElementsByClassName('target_thumb_img');
-  target_thumb_img[0].innerHTML = currentPortfolioLB;
+  target_thumb_img[0].innerHTML = source_thumb_img;
+
+  mainLbImage();
+
+}
+
+function mainLbImage(){
+  // inserts first li of lightbox into main image
+  var mainImgLB = document.getElementById('main_img');
+  var target_thumb_img = document.getElementsByClassName('target_thumb_img');
+   mainImgLB.innerHTML = target_thumb_img[0].firstElementChild.innerHTML;
+}
+
+function lbThumbnailControls() {
+
+
 }
 
 
