Added most links to people's socials.

--- a/portfolio-cards.html
+++ b/portfolio-cards.html
@@ -72,30 +72,12 @@ var closeTab = document.getElementById('lightbox_closeout')
 closeTab.addEventListener('click', function(){document.getElementById('lightbox').className = 'closeLightbox';});
 
 
-
-
-
 };
-
-
-
-
-
-
-
-
 
 
 window.onload = init;
 
  </script>
-
-
-
-
-
-
-
 
 
 </head>
@@ -122,9 +104,10 @@ window.onload = init;
       <div class="social-wrapper">
       <!-- <p class="designer-name"></p> -->
       <!-- <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span> -->
-      <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
+      <!-- <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
+      <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span> -->
       <!-- <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span> -->
-      <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
+
       </div>
 
       <p>I have always been drawn to writing and the immersive art of storytelling. Great design tells a story of its own, and I love trying to capture that in its visual form.</p>
@@ -145,10 +128,10 @@ window.onload = init;
       <div class="portfolio-content__wrapper">
         <div class="social-wrapper">
         <p class="designer-name">Tin Fish Design</p>
-        <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
-        <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
-        <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
-        <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
+        <span><a href="https://www.facebook.com/Tin-Fish-Design-381265962413198/" target="_blank"><i class="fab fa-2x fa-facebook"></i></a></span>
+        <span><a href="https://www.instagram.com/tinfishdesign/" target="_blank"><i class="fab fa-2x fa-instagram"></i></a></span>
+        <span><a href="https://twitter.com/TinFishDesign?lang=en" target="_blank"><i class="fab fa-2x fa-twitter"></i></a></span>
+        <!-- <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span> -->
         </div>
 
         <p>From illustrations to layouts, refinement to building, I usually start with rough sketches for everything. I'm looking to hone my skills and do something more meaningful with my artistic ability.</p>
@@ -186,10 +169,10 @@ Joe Click
 <div class="portfolio-content__wrapper">
 <div class="social-wrapper">
 <!-- <p class="designer-name"></p> -->
-<span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
+<!-- <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
 <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
 <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
-<span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
+<span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span> -->
 </div>
 
 <p>I enjoy creating illustrations & concept designs. I am inspired by designs that break outside the box of normal conventions.</p>
@@ -210,10 +193,11 @@ Joe Click
 <div class="portfolio-content__wrapper">
 <div class="social-wrapper">
 <p class="designer-name">Prochaska Creative</p>
-<span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
-<span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
-<span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
-<span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
+<!-- <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span> -->
+<span><a href="https://www.behance.net/danielleprochaska" target="_blank"><i class="fas fa-2x fa-globe"></i></a></span>
+<span><a href="https://www.instagram.com/prochaskacreative/" target="_blank" ><i class="fab fa-2x fa-instagram"></i></a></span>
+<!-- <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span> -->
+
 </div>
 
 <p>When designing, I don't allow any limitations; I allow my mind to be completely free to wander and explore different ideas. This allows me to invent unique designs that will tell stories or evoke raw emotions.</p>
@@ -251,10 +235,11 @@ Karey Stivers
 <div class="portfolio-content__wrapper">
 <div class="social-wrapper">
 <p class="designer-name">Katalist Innovations</p>
-<span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
-<span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
+<!-- <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span> -->
+<span><a href="https://katalistinnovations.design/" target="_blank"><i class="fas fa-2x fa-globe"></i></a></span>
+<span><a href="https://www.instagram.com/karey.stivers/" target="_blank"><i class="fab fa-2x fa-instagram"></i></a></span>
 <!-- <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span> -->
-<span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
+
 </div>
 
 <p>Being a designer isn't just about having a career and making money – it's about being the creative person I've always been... I love being the "creative type" that helps others share their message in interesting and beautiful ways...</p>
@@ -276,10 +261,11 @@ Karey Stivers
 <div class="portfolio-content__wrapper">
 <div class="social-wrapper">
 <!-- <p class="designer-name">Claire Creative</p> -->
-<span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
+<!-- <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
 <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
-<span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
-<span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
+<span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span> -->
+<span><a href="https://kennedypew.myportfolio.com/" target="_blank"><i class="fas fa-2x fa-globe"></i></a></span>
+<span><a href="https://kennedyclairephotography.myportfolio.com/" target="_blank"><i class="fa fa-2x fa-camera" aria-hidden="true"></i></a></span>
 </div>
 
 <p>All of my inspiration comes from the world around me. There are so many opportunities, possibilities, and beauty all around us, and that is the fire that feeds my inspiration.</p>
@@ -317,10 +303,10 @@ Suelynn Parker
 <div class="portfolio-content__wrapper">
 <div class="social-wrapper">
 <p class="designer-name">InfiniteParker Designs</p>
-<span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
-<span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
-<span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
-<span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
+<span><a href="https://www.facebook.com/ipdesigns" target="_blank"><i class="fab fa-2x fa-facebook"></i></a></span>
+<span><a href="https://www.instagram.com/infiniteparkerdesigns/" target="_blank"><i class="fab fa-2x fa-instagram"></i></a></span>
+<!-- <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
+<span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span> -->
 </div>
 
 <p>I am inspired by animations, video game graphics, magazines, and comic book/novels. Curiosity motivates me to explore new designs and skills and be inspired by other designers and artists.</p>
@@ -341,10 +327,10 @@ Suelynn Parker
 <div class="portfolio-content__wrapper">
 <div class="social-wrapper">
 <p class="designer-name">Qadira Graphics</p>
-<span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
-<span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
-<span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
-<span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
+<!-- <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span> -->
+<span><a href="https://www.instagram.com/qadira_graphics/" target="_blank"><i class="fab fa-2x fa-instagram"></i></a></span>
+<!-- <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
+<span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span> -->
 </div>
 
 <p>I didn't want to waste any time "getting started" in my career. I have grown so much as an artist, designer, and as a person since I joined the NIC Graphic Design Program.</p>
@@ -381,10 +367,10 @@ Suelynn Parker
   <div class="portfolio-content__wrapper">
     <div class="social-wrapper">
     <p class="designer-name">Stoke Design</p>
-    <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
-    <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
-    <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
-    <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
+    <span><a href="https://www.facebook.com/stokedesign/" target="_blank"><i class="fab fa-2x fa-facebook"></i></a></span>
+    <span><a href="https://www.instagram.com/stokedesigns/" target="_blank"><i class="fab fa-2x fa-instagram"></i></a></span>
+    <!-- <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
+    <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span> -->
     </div>
 
     <p>I like to do lettering and get inspiration from the web. I would like to work with cool people doing branding and designing for others.</p>
@@ -405,10 +391,10 @@ Suelynn Parker
     <div class="portfolio-content__wrapper">
       <div class="social-wrapper">
       <!-- <p class="designer-name"></p> -->
-      <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
+      <!-- <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
       <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
       <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
-      <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
+      <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span> -->
       </div>
 
       <p>I would love to work as a Creative Director for a design agency. I had spent the previous 10 years as either a high school teacher, therapeutic wilderness guide, or life coach working with at-risk young adults and adolescents. I jump at the chance of being creative and solving problems, which inspired me to be a graphic designer.</p>
@@ -444,10 +430,10 @@ Suelynn Parker
         <div class="portfolio-content__wrapper">
           <div class="social-wrapper">
           <p class="designer-name">Cosmic Div</p>
-          <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
+          <!-- <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
           <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
           <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
-          <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
+          <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span> -->
           </div>
 
           <p>I want to be a core member of a talented team working on premium websites. I get creative through my process of listening to loud electric music, and drinking black tea.</p>
@@ -468,10 +454,11 @@ Suelynn Parker
           <div class="portfolio-content__wrapper">
             <div class="social-wrapper">
             <p class="designer-name">Leeder Designs</p>
-            <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
-            <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
-            <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
-            <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
+            <span><a href="https://www.leederdesigns.com/" target="_blank"><i class="fas fa-2x fa-globe"></i></a></span>
+            <span><a href="https://www.facebook.com/leederdesigns/" target="_blank"><i class="fab fa-2x fa-facebook"></i></a></span>
+            <span><a href="https://www.instagram.com/leederdesigns/" target="_blank"><i class="fab fa-2x fa-instagram"></i></a></span>
+            <!-- <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span> -->
+
             </div>
 
             <p>I currently work at Anthem Church as a Creative/Production Assistant and apply skills for freelance on the side. I have my design persona, Leeder Designs, designing brands, prints, website, and managing social media.</p>
@@ -509,10 +496,10 @@ Suelynn Parker
         <div class="portfolio-content__wrapper">
           <div class="social-wrapper">
           <!-- <p class="designer-name"></p> -->
-          <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
+          <!-- <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
           <span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
           <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
-          <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span>
+          <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span> -->
           </div>
 
           <p>I love food & animals, but what I love even more is to travel the world & capture its beauty. I would love to be on a set somewhere making movies and to be in charge of projects and/or helping others create new designs. What helps my creative process is a cup of of coffee, putting on some Queen, and busting a move! </p>
