--- a/index.html
+++ b/index.html
@@ -10,29 +10,52 @@
 
 <body>
 	<header class="nav-desktop">
+	<header class="nav-desktop nav-mobile">
 		<nav>
-		<ul class="nav-desktop__list">
-			<li class="nav-desktop__item">
-				<a class="h1 nav-link" href="index.html">D S C V R
+			<!-- Mobile Nav header: logo and hamburger menu STARTS -->
+			<div class="nav-mobile__navbar">
+				<a href="index.html" class="nav-mobile__logo">
+					<img id="mobileLogo" src="src/img/branding/dscvr1.5x.png" alt="DSCVR Logo" /></a>
+					<nav>
+						<ul class="nav-desktop__list">
+
+							<li class="nav-desktop__item">
+								<a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
+								</a>
+							</li>
+							<li class="nav-desktop__item">
+								<a class="nav-link nav-link--secondary"
+								href="guestbook.html">Guestbook
+							</a>
+						</li>
+						<li  class="nav-desktop__item">
+							<a class=" nav-link nav-link--tertiary" href="contact.html">Contact
+							</a>
+						</li>
+					</ul>
+				</nav>
+				<a id="hamburger"><i  class="fas fa-bars fa-2x nav-mobile__hamburger"></i></a>
+			</div>
+
+			<!-- Mobile Nav header: logo and hamburger menu ENDS -->
+
+			<ul id="mobileMenu" class="mobile-menu nav-mobile--bg-stripes">
+				<li class="nav-desktop__item nav-mobile__item">
+					<a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
+					</a>
+				</li>
+				<li class="nav-desktop__item nav-mobile__item">
+					<a class="nav-link nav-link--secondary"
+					href="guestbook.html">Guestbook
 				</a>
 			</li>
-			<li class="nav-desktop__item">
-				<a class="nav-link nav-link--primary" href="portfolio.html">Portfolio
-				</a>
-			</li>
-			<li class="nav-desktop__item">
-				<a class="nav-link nav-link--secondary"
-				href="guestbook.html">Guestbook
-				</a>
-			</li>
-			<li  class="nav-desktop__item">
+			<li  class="nav-desktop__item nav-mobile__item">
 				<a class=" nav-link nav-link--tertiary" href="contact.html">Contact
 				</a>
 			</li>
 		</ul>
 	</nav>
-	</header>
-
+</header>
 <!-- NAVIGATION ENDS -->
 
 
