--- a/portfolio-cards.html
+++ b/portfolio-cards.html
@@ -169,9 +169,9 @@ Joe Click
 <div class="portfolio-content__wrapper">
 <div class="social-wrapper">
 <!-- <p class="designer-name"></p> -->
-<!-- <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span>
-<span><a href="#"><i class="fab fa-2x fa-instagram"></i></a></span>
-<span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
+<!-- <span><a href="#"><i class="fab fa-2x fa-facebook"></i></a></span> -->
+<span><a href="https://www.instagram.com/josephclick/" target="_blank"><i class="fab fa-2x fa-instagram"></i></a></span>
+<!-- <span><a href="#"><i class="fab fa-2x fa-twitter"></i></a></span>
 <span><a href="#"><i class="fas fa-2x fa-globe"></i></a></span> -->
 </div>
 
