--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
-	<link rel="stylesheet" href="./dist/css/app.css">
+	<script src="dist/js/app.js"
+	<link rel="stylesheet" href="dist/css/app.css">
 	<title>North Idaho College Student Portfolio Show</title>
 </head>
 <body class="bg-stripes">
@@ -36,7 +37,7 @@
 	<!-- MOBILE HERO IMAGE MODULE BEGINS -->
 
 	<!-- desktop hero image -->
-	<img class="hero-image__desktop" src="src/img/main-img-assets/desktop-hero-transparent.png" alt="Group illustration." />
+	<img class="hero-image__desktop" src="img/main-img-assets/desktop-hero-transparent.png" alt="Group illustration." />
 
 
 	<!-- MOBILE HERO IMAGE SLIDER ENDS -->
