--- a/guestbook.html
+++ b/guestbook.html
@@ -75,29 +75,56 @@
 	DSCVR | Student Portfolio Show <br />
 	<strong>May 3</strong>
 </h1>
-<a href="" class="button button--skew button--hoverstraight"><div class="button--inverseskew button--hoverstraight">View Event Details</div></a>
-<img class="hero-image__desktop" src="src/img/mobile-hero/desktop-hero-01.png" alt="Group illustration." />
-</div>
+
+<table>
+	<thead>
+		<tr>
+			<th>Name</th>
+			<th>Address</th>
+			<th colspan="2">Action</th>
+		</tr>
+	</thead>
+
+	<?php while ($row = mysqli_fetch_array($results)) { ?>
+		<tr>
+			<td><?php echo $row['name']; ?></td>
+			<td><?php echo $row['address']; ?></td>
+			<td>
+				<a href="index.php?edit=<?php echo $row['id']; ?>" class="edit_btn" >Edit</a>
+			</td>
+			<td>
+				<a href="server.php?del=<?php echo $row['id']; ?>" class="del_btn">Delete</a>
+			</td>
+		</tr>
+	<?php } ?>
+</table>
+
+	<form method="post" action="server.php" >
+		<input type="hidden" name="id" value="<?php echo $id; ?>">
+		<div class="input-group">
+			<label>Name</label>
+			<input type="text" name="name" value="<?php echo $name; ?>">
+		</div>
+		<div class="input-group">
+			<label>Address</label>
+			<input type="text" name="address" value="<?php echo $address; ?>">
+		</div>
+		<div class="input-group">
+			<?php if ($update == true): ?>
+	<button class="btn" type="submit" name="update" style="background: #556B2F;" >update</button>
+<?php else: ?>
+	<button class="btn" type="submit" name="save" >Save</button>
+<?php endif ?>
+		</div>
+	</form>
+
+
+
+
+
+
 <main>
 	<section class="content-block content-block--wide">
-	<div class="card card--yellow">
-
-		<a><img src="src/img/main-img-assets/Web_Portfolio_1200px_RGB.jpg"></a>
-		<h1>PORTFOLIO</h1>
-
-	   <div class="cards-button">
-		<a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--yellow"><div class="button--inverseskew button--hoverstraight">Discover Us</div></a>
-	 </div>
-	</div>
-	<div class="card card--pink">
-
-		<a><img src="#"></a>
-			<h1>PHOTOBOOTH</h1>
-
-		   <div class="cards-button">
-			<a href="" class="button button--skew button--hoverstraight button__nocolor button__nocolor--red"><div class="button--inverseskew button--hoverstraight">Join The Fun</div></a>
-		 </div>
-		</div>
 
 		<div class="card card--blue">
 
