added content block flex

--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
 <img class="hero-image__desktop" src="src/img/mobile-hero/desktop-hero-01.png" alt="Group illustration." />
 </div>
 <main>
-	<section class="content-block content-block--wide">
+	<section class="content-block content-block--flex content-block--wide">
 	<div class="card card--yellow">
 
 		<a><img src="src/img/main-img-assets/Web_Portfolio_1200px_RGB.jpg"></a>
